# BirdNET-Analyzer

./: .buildinfo  .dockerignore  .gitignore  BirdNET-Analyzer-full.spec  BirdNET-Analyzer-mac.spec  BirdNET-Analyzer-win.spec  BirdNET-Anaylzer-setup.iss  DEVELOPMENT.adoc  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  RAWtoFlac.py  RAWtoFlacMulti.py  RAWtoFlacSplit.py  README.adoc  README.md  _config.yml  analyze.py  analyzeCPU.py  analyzeGPU.py  analyze_adapted.py  audio.py  best-practices.html  birdnet-tiny.html  birdnetr.html  client.py  command.bat  commandCPU.bat  commandGPU.bat  config.py  contribute.html  copySDFiles.py  deploy.py  do_analyses.py  embeddings.py  error_log.txt  eval.py  faq.html  genindex.html  (+35 more)
.doctrees/: best-practices.doctree  birdnet-tiny.doctree  birdnetr.doctree  contribute.doctree  faq.doctree  index.doctree  installation.doctree  models.doctree  showroom.doctree  usage.doctree
.doctrees/best-practices/: segment-review.doctree  species-lists.doctree  training.doctree
.doctrees/usage/: docker.doctree  gui.doctree  projects-map.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build.yml  documentation.yml  main.yml  publish-to-testpypi.yml  publish.yml
_sources/: contribute.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  showroom.rst.txt  usage.rst.txt
_sources/best-practices/: segment-review.rst.txt  species-lists.rst.txt  training.rst.txt
_sources/usage/: cli.rst.txt  projects-map.rst.txt
assets/css/: style.scss
best-practices/: segment-review.html  species-lists.html  training.html
birdnet/: utils.py
birdnet/analysis/: codes_loading.py  file_analysing.py  main.py  raw_audio_from_file_getting.py  result_file_saving.py  samples_prediction.py  sorted_timestamps_getting.py
birdnet/audio/: audio.py  audio_file_opening.py  center_cropping.py  noise_creation.py  signal_saving.py  signal_splitting.py
birdnet/client/: main.py  request_sending.py  result_saving.py
birdnet/configuration/: config.py
birdnet/embeddings/: as_embeddings_file_saving.py  error_log_writing.py  file_analysing.py  main.py
birdnet/gui/: main.py
birdnet/model/: main.py
birdnet/segments/: files_parsing.py  folders_parsing.py  main.py  result_file_type_detection.py  segments_extracting.py  segments_finding.py
birdnet/server/: main.py  result_pooling.py
birdnet/species/: main.py  species_list_getting.py
birdnet/train/: _load_training_data.py  _training_data_loading.py  main.py  train_model.py
birdnet/translations/: constants.py  labels_file_saving.py  locale_data_getting.py  main.py  species_names_translating.py
birdnet/utils/: audio_file_collecting.py  error_log_clearing.py  error_log_writing.py  lines_reading.py  subdirectories_listing.py
birdnet_analyzer/: analyze.py  audio.py  cli.py  client.py  config.py  eBird_taxonomy_codes_2021E.json  embeddings.py  localization.py  model.py  search.py  segments.py  server.py  species.py  train.py  training_data_segments.py  translate.py  utils.py
birdnet_analyzer/analyze/: __init__.py  __main__.py  utils.py
birdnet_analyzer/checkpoints/: README.md
birdnet_analyzer/embeddings/: utils.py  (+2 more)
checkpoints/: README.md
docs/: api.rst  best-practices.rst  birdnet-tiny.rst  birdnetr.rst  conf.py  contribute.rst  faq.rst  gui.rst  index.rst  installation.rst  models.rst  projects.html  showroom.rst  usage.rst
example/: soundscape.BirdNET.results.csv  soundscape.BirdNET.results.txt  soundscape.BirdNET.selection.table.txt  soundscape.birdnet.embeddings.txt  soundscape.txt  species_list.txt
extra-hooks/: hook-gradio-client.py  hook-gradio.py  hook-gradio_client.py  hook-librosa.py  hook-pywebview.py  hook-webview.py
gui/: analysis.py  gui.css  gui.js  gui_analysis.py  gui_multi_file.py  gui_review.py  gui_segments.py  gui_single_file.py  gui_species.py  gui_train.py  gui_utils.py  index.html  multi_file.py  review.py  segments.py  single_file.py  species.py  style.css  train.py
lang/: de.json  en.json  fr.json  pt-br.json  ru.json  zh_TW.json
requirements.d/: build.in  build_qt.in  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt  requirements_test_lite.in  runtime.in  runtime_lite.in  test.in  test.txt  test_lite.in
tests/: _paths.py  test_analyze.py  test_analyze__cli.py  test_analyze__main.py  test_audio.py  test_segments.py  test_train.py  test_utils.py
usage/: cli.html  docker.html  gui.html  projects-map.html
(+290 files in other folders)
