[project]
name = "BirdNET-Analyzer"
version = "1.5.1"
license = { text = "CC BY-NC-SA 4.0" }
description = "BirdNET analyzer for scientific audio data processing and bird classification."
authors = [{ name = "Stefan Kahl" }]
maintainers = [{ name = "Josef Haupt" }, { name = "Max Mauermann" }]
keywords = ["birdnet", "birdnet-analyzer"]
readme = "README.md"
requires-python = ">=3.11"

dependencies = ["librosa==0.9.2", "resampy", "tensorflow==2.15.0"]

[project.optional-dependencies]
train = ["tqdm", "keras-tuner"]
server = ["bottle", "requests"]
gui = ["gradio==5.4.0", "pywebview", "matplotlib"]

[project.urls]
Homepage = "https://birdnet.cornell.edu/birdnet"
Documentation = "https://kahst.github.io/BirdNET-Analyzer/"
Repository = "https://github.com/kahst/BirdNET-Analyzer"
Issues = "https://github.com/kahst/BirdNET-Analyzer/issues"
Download = "https://github.com/kahst/BirdNET-Analyzer/releases/latest"
